Modified the link for sorted images

--- a/templates/html/feedback.html
+++ b/templates/html/feedback.html
@@ -101,7 +101,7 @@
                         <h3 ><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
                         <a href="#" onclick="GotoGallery(event)">Default</a>
                         <a href="#">Sort By Credibility</a>
-                        <a href="#">Sort By Publish Time</a>
+                        <a href="/gallery?sort=asce">Sort By Publish Time</a>
                     </div>
                     <div class="submenu-div3">
                         <h3><i class="fa fa-star" style="font-size:24px;color: #FFCD29"></i>&nbsp;&nbsp;&nbsp;Truth Images</h3>
@@ -110,7 +110,7 @@
                         <h3 style="margin-top: 15px"><i class="fa fa-star-half-empty" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Fake Image</h3>
                         <a href="#">Show All</a>
                         <a href="#">Sort By Credibility</a>
-                        <a href="#">Sort By Publish Time</a>
+                        <a href="/gallery?sort=asce">Sort By Publish Time</a>
                     </div>
                     <div class="submenu-div4">
                         <div style="width: 80%; height: 80%; display: flex;position: relative; left: 10%; top: 10%;background: #00467F">
@@ -148,7 +148,7 @@
                                 <h3><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
                                 <a href="#" onclick="GotoGallery(event)">Default</a>
                                 <a href="#">Sort By Credibility</a>
-                                <a href="#">Sort By Publish Time</a>
+                                <a href="/gallery?sort=asce">Sort By Publish Time</a>
                             </div>
                             <div class="clm">
                                 <h3><i class="fa fa-star" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Truth Images</h3>
@@ -157,7 +157,7 @@
                                 <h3><i class="fa fa-star-half-empty" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Fake Image</h3>
                                 <a href="#">Show All</a>
                                 <a href="#">Sort By Credibility</a>
-                                <a href="#">Sort By Publish Time</a>
+                                <a href="/gallery?sort=asce">Sort By Publish Time</a>
                             </div>
                             <div class="clm background-gallery">
                                 <a href="#" ><img src="/static/images/background_gallery.jpeg" style="width:280px"/></a>
