--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -187,7 +187,7 @@
             <div class="top-trust-indicate-container">
                 <div style="height: 250px;width: 350px;display: flex;margin-left: 5px;margin-top: 15px;flex-direction: column; ">
                     <h1 style="padding-left: 20px;color: white;font-weight: bolder;margin: 10px 0 0 0">The Trust Indicator</h1>
-                    <p style="padding-left: 20px;color: white;margin: 20px 0 0 0;line-height: 25px">This is student projectThis is student projectThis is student projectThis is student projectThis is student project</p>
+                    <p style="padding-left: 20px;color: white;margin: 20px 0 0 0;line-height: 25px">The project aims to develop a photo repository website with Australia as its theme, aiding consumers in better understanding and evaluating the credibility of images by displaying uploaded image metadata and providing visual cues.</p>
                     <div style="flex-grow: 1; display: flex; flex-direction: column-reverse; align-items: center;">
                         <button type="button" title="register" class="register-button  register-button-color register-button-background-color" onclick="background_register(event)">
                             <span>Register Now ! &nbsp;&nbsp;&nbsp;<i class="fa fa-chevron-right"></i></span>
